log/force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Log object to track down errors/warning situations</description>
    <label>Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>