log/force-app/main/default/objects/Log__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>Name of apex class</description>
    <inlineHelpText>Name of apex class</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>