log/force-app/main/default/objects/Log__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <description>Application Id</description>
    <inlineHelpText>Application Id</inlineHelpText>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>