log/force-app/main/default/objects/Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <defaultValue>&apos;Default&apos;</defaultValue>
    <description>Category of system logs</description>
    <inlineHelpText>Category of system logs</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>