log/force-app/main/default/objects/Log__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comment of the error or any additional information</description>
    <inlineHelpText>Comment of the error or any additional information</inlineHelpText>
    <label>Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>