log/force-app/main/default/objects/Log__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>Contact Id</description>
    <inlineHelpText>Contact Id</inlineHelpText>
    <label>Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>