log/force-app/main/default/objects/Log__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Plain Text Description</description>
    <inlineHelpText>Plain Text Description</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>