log/force-app/main/default/objects/Log__c/fields/Exception_Description_HTML__c.field-meta.xml
<CustomField>
    <fullName>Exception_Description_HTML__c</fullName>
    <description>Response from remote endpoint, the content should be json or html.</description>
    <inlineHelpText>Response from remote endpoint, the content should be json or html.</inlineHelpText>
    <label>Remote Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>