log/force-app/main/default/objects/Log__c/fields/Exception_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Exception_Stack_Trace__c</fullName>
    <description>Exception Stack Trace</description>
    <inlineHelpText>Exception Stack Trace</inlineHelpText>
    <label>Exception Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>