log/force-app/main/default/objects/Log__c/fields/HTTP_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Status_Code__c</fullName>
    <description>Status code of http response</description>
    <inlineHelpText>Status code of http response</inlineHelpText>
    <label>HTTP Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>