log/force-app/main/default/objects/Log__c/fields/Incoming_Payload__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Payload__c</fullName>
    <description>Response of callout</description>
    <inlineHelpText>Response of callout</inlineHelpText>
    <label>Incoming Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>