log/force-app/main/default/objects/Log__c/fields/Is_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Is_Logged_In__c</fullName>
    <defaultValue>&apos;Null&apos;</defaultValue>
    <description>Is user logged in</description>
    <inlineHelpText>Is user logged in</inlineHelpText>
    <label>Is Logged In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>