log/force-app/main/default/objects/Log__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language</description>
    <inlineHelpText>Language</inlineHelpText>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>