log/force-app/main/default/objects/Log__c/fields/Operation_Method__c.field-meta.xml
<CustomField>
    <fullName>Operation_Method__c</fullName>
    <description>Operation Method</description>
    <inlineHelpText>Operation Method</inlineHelpText>
    <label>Operation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>