log/force-app/main/default/objects/Log__c/fields/Operation_Name__c.field-meta.xml
<CustomField>
    <fullName>Operation_Name__c</fullName>
    <description>Name of Operation</description>
    <inlineHelpText>Name of Operation</inlineHelpText>
    <label>Operation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>