log/force-app/main/default/objects/Log__c/fields/Outgoing_Payload__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Payload__c</fullName>
    <description>Outbounding message</description>
    <inlineHelpText>Outbounding message</inlineHelpText>
    <label>Outgoing Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>