log/force-app/main/default/objects/Log__c/fields/Remote_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Remote_Endpoint__c</fullName>
    <description>Remote Endpoint of callout</description>
    <inlineHelpText>Remote Endpoint of callout</inlineHelpText>
    <label>Remote Endpoint</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>