log/force-app/main/default/objects/Log__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Salesforce Session Id</description>
    <inlineHelpText>Salesforce Session Id</inlineHelpText>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>