log/force-app/main/default/objects/Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Log Severity</description>
    <inlineHelpText>Log Severity</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <default>true</default>
                <label>ERROR</label>
            </value>
            <value>
                <fullName>FATAL</fullName>
            </value>
            <value>
                <fullName>CONFIRM</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>