log/force-app/main/default/objects/Log__c/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <description>Source object id</description>
    <inlineHelpText>Source object id</inlineHelpText>
    <label>Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>