log/force-app/main/default/objects/Log__c/fields/Tab_Id__c.field-meta.xml
<CustomField>
    <fullName>Tab_Id__c</fullName>
    <description>Front end Tab Id</description>
    <inlineHelpText>Front end Tab Id</inlineHelpText>
    <label>Tab Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>