log/force-app/main/default/objects/Log__c/fields/Traceability_Id__c.field-meta.xml
<CustomField>
    <fullName>Traceability_Id__c</fullName>
    <description>Traceability Id</description>
    <inlineHelpText>Traceability Id</inlineHelpText>
    <label>Traceability Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>