log/force-app/main/default/objects/Log__c/recordTypes/Application_Log.recordType-meta.xml
<RecordType>
    <fullName>Application_Log</fullName>
    <active>true</active>
    <description>Application Log</description>
    <label>Application Log</label>
</RecordType>