log/force-app/main/default/objects/Log__c/recordTypes/Payload_Log.recordType-meta.xml
<RecordType>
    <fullName>Payload_Log</fullName>
    <active>true</active>
    <description>Payload Logs</description>
    <label>Payload Log</label>
</RecordType>